--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Minor POD clean-up
 
 1.00      2015-08-03 17:57:59-07:00 America/Los_Angeles
         - First version, released on an unsuspecting world.
