--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Adding Perl versions to test; annual general update for 2018
 
 1.01      2015-08-03 18:04:30-07:00 America/Los_Angeles
         - Minor POD clean-up
