--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Improve .gitignore file
         - License migrate to Artistic 2.0
         - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
         - Update copyright year
