--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Minor documentation update
 
 1.03      2021-01-10 13:38:22-08:00 America/Los_Angeles
         - Migrate to Test2::V0
