--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Switch from Google Chart API to Quick Chart API
 
 1.04      2022-03-18 08:49:53-07:00 America/Los_Angeles
         - Minor documentation update
