--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Can now call otpauth without first calling qr_code
 
 1.05      2024-04-18 15:00:06-07:00 America/Los_Angeles
         - Switch from Google Chart API to Quick Chart API
