Use Crypt::URandom to provide urand as rand replacement

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Use Crypt::URandom to provide urand as rand replacement
 
 1.07      2025-02-13 13:27:22-08:00 America/Los_Angeles
         - Perl minimum version align
