--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Auth::GoogleAuth
 
 {{$NEXT}}
+        - Add security policy as per CPANSec recommendation
         - Switch Crypt::URandom for Crypt::PRNG for rand
 
 1.08      2025-06-11 07:18:54-07:00 America/Los_Angeles
